# zephyr_gui

./: README.md  SCR.txt  west.yml  zephyr_gui.guiguider
custom/: custom.h  pan_procces.c  pan_procces.h
export_code/: CMakeLists.txt  app.overlay  linker_arm_nocopy.ld  prj.conf  west.yml
export_code/boards/: stm32f746g_disco.conf  stm32f746g_disco.dtsi  stm32f746g_disco.overlay
export_code/boards/stm32f746g_disco/: ext_mem_init.c
export_code/doc/: TFT_ModbusSlaveV10.mbs  TFT_ModbusV13.mbp  TFT_ModbusV14.mbp
export_code/inc/: modbus_master.h  modbus_slave.h  modbus_tft.h
export_code/src/: main.c  main.cpp
export_code/src/custom/: custom.c  pan_procces.c  pan_procces.h
lvgl-simulator/: lv_conf.h  main.c
ports/linux/: build.sh
sdk/Core/board/: board.c  board.h  clock_config.c  clock_config.h  lvgl_support.c  lvgl_support.h  pin_mux.c  pin_mux.h
sdk/Core/device/: MCXN947_cm33_core0_features.h  system_MCXN947_cm33_core0.c  system_MCXN947_cm33_core0.h
sdk/Core/doc/: readme.txt
sdk/Core/drivers/: fsl_clock.c  fsl_clock.h  fsl_common.h  fsl_i3c.c  fsl_lpflexcomm.c  fsl_lpflexcomm.h  fsl_lpuart.c  fsl_lpuart.h  fsl_reset.h
sdk/Core/lcd/: flexio_8080_drv.c  lcd_hx8357_drv.c  lcd_hx8357_drv.h
sdk/Core/source/: lv_conf.h  lvgl_guider.c
sdk/Core/utilities/: fsl_debug_console.c
sdk/iar/: lvgl_guider.ewd  lvgl_guider.ewp  lvgl_guider_ewp.template
sdk/iar/deployment/: lvgl_guider.release.driver.xcl  lvgl_guider.release.general.xcl  lvgl_guider_release.jlink
sdk/iar/startup/: startup_MCXN947_cm33_core0.s
temp/: board.h  simulator.h
(+4 files in other folders)
